--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,4 +1,13 @@
 [
+    {
+    "name": "Researcg works",
+    "desc": "recent research and contributions",
+    "image": "images",
+    "category": "publ",
+    "links": {
+      "view": "https://unleashed-bumper-9a2.notion.site/Key-Research-Industrial-Projects-288ec31a60a180bba46bf6d154607f72?pvs=143",
+      "code": "#"
+    }
   {
     "name": "PATENT",
     "desc": "HAND LAUNCHABLE COPTER SYSTEM FOR SURVEILLANCE",
