Fix image path in projects.json

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,7 @@
     {
     "name": "Researcg works",
     "desc": "recent research and contributions",
-    "image": "images",
+    "image": "images_l",
     "category": "publ",
     "links": {
       "view": "https://unleashed-bumper-9a2.notion.site/Key-Research-Industrial-Projects-288ec31a60a180bba46bf6d154607f72?pvs=143",
