Fix typo in project name from 'Researcg' to 'Research'

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Researcg works",
+    "name": "Research works",
     "desc": "recent research and contributions",
     "image": "images_l",
     "category": "publ",
