--- a/projects/projects.json
+++ b/projects/projects.json
@@ -3,7 +3,7 @@
     "name": "Research works",
     "desc": "recent research and contributions",
     "image": "images_l",
-    "category": "publ",
+    "category": "aiml",
     "links": {
       "view": "https://unleashed-bumper-9a2.notion.site/Key-Research-Industrial-Projects-288ec31a60a180bba46bf6d154607f72?pvs=143",
       "code": "#"
